--- a/test/fixtures/controllers.yml
+++ b/test/fixtures/controllers.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  roster_date: 2023-02-03
-  company_id: 1
+  Roster: MyString
 
 two:
-  roster_date: 2023-02-03
-  company_id: 1
+  Roster: MyString
